--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "type": "module"
   },
   "dependencies": {
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.2",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
