--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.8.30",
     "postcss": "^8.5.6",
     "tailwindcss": "^4",
     "typescript": "^5"
