--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "type": "module"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "next": "15.5.3",
     "next-auth": "^4.24.13",
+    "next-cloudinary": "^6.17.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
